--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -66,6 +66,7 @@
             p
 
 
-.background__banner 
-  background-size: cover !important
-  background-position: 70% 30% !important
+.program
+  .background__banner 
+    background-size: cover !important
+    background-position: 70% 30% !important
