--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -24,6 +24,8 @@
             margin-bottom: .75em
             width: 80%
             align-self: center
+            @include tablet-phone 
+              width: 95%
        
     .enroll
         display: flex
