--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -48,7 +48,7 @@
             @include navsnap
                 width: 50% 
             @include tablet
-                width: 80%
+                width: 100%
                 margin: auto
                 // background: teal
     .sponsers
@@ -194,3 +194,8 @@
         //     margin: auto
        
 
+.index
+  .background__banner
+    background-repeat: no-repeat !important
+    background-size: cover !important
+    
