--- a/src/components/background_banner/background_banner.sass
+++ b/src/components/background_banner/background_banner.sass
@@ -27,7 +27,7 @@
               align-items: center
               justify-content: center
               width: 100%
-              height: 100%
+              height: 80%
               &__container
                 // background: red
                 object-position: left !important
@@ -75,6 +75,8 @@
               width: 60%
             // background: seagreen
             // justify-content: space-between
+            &__top, &__bottom 
+              width: 85%
             &__top
               h2 
                 margin-top: -10px
