--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -11,7 +11,7 @@
     box-shadow: 0px -2px 2px 0px rgba(219,219,219,0.5)
     @media(max-width: 720px)
       padding: 2em 0em 2.25em 0em
-    @include tablet-phone
+    @include tablet
       margin-bottom: 12px
     &__cols
         display: flex
