--- a/src/components/background_banner/background_banner.sass
+++ b/src/components/background_banner/background_banner.sass
@@ -7,6 +7,8 @@
       height: 70vh !important
     &__col
         width: 100%
+        max-height: 100%
+        // background: pink
         display: flex
         justify-content: center 
         align-items: center
@@ -21,6 +23,8 @@
                 width: 100%
                 height: 55%
                 // background: lightgreen
+            @include phone-large 
+              height: 45%
             &__image 
               display: flex 
               align-content: center
@@ -38,8 +42,9 @@
                 position: relative
                 @include tablet-phone 
                     height: 80%
-                    // background: pink
                     // width: auto
+                @include phone-large 
+                  height: 95%
                 .gatsby-image-wrapper, img 
                   object-fit: contain !important
                   object-position: left !important
@@ -67,6 +72,7 @@
             flex-direction: column
             justify-content: center
             // background: green
+            flex: 1
             max-height: 100%
             height: 100%
             width: 65%
@@ -77,6 +83,8 @@
             // justify-content: space-between
             &__top, &__bottom 
               width: 85%
+              @include tablet-phone 
+                width: 100%
             &__top
               h2 
                 margin-top: -10px
@@ -100,6 +108,8 @@
             @include tablet-phone
                 height: 40%
                 width: 100%
+            @include phone-large 
+              height: 50%
             // p
             //     color: $light
             //     // padding-top: 3em
