--- a/src/components/styles/faq.sass
+++ b/src/components/styles/faq.sass
@@ -67,7 +67,16 @@
                             height: 100%
                             width: 1.1em
                             transition: all .35s ease-in-out
-                            // margin: auto 0
+                        svg
+                            align-self: center
+                            display: flex
+                            justify-self: center 
+                            height: 100%
+                            width: 1.1em
+                            transition: all .35s ease-in-out
+                            path
+                              fill: #2f2f2f
+
                             &.expanded 
                                 transform: rotateX(-180deg)
                     p 
