added bio drop down feature

--- a/src/components/styles/team.sass
+++ b/src/components/styles/team.sass
@@ -24,7 +24,7 @@
               font-size: 1.15em
               // margin-bottom: 0em
               font-weight: 300
-              margin-top: 1.2em
+                margin-top: .8em
             @media(max-width: 760px)
                 width: 100%
                 text-align: center
@@ -43,6 +43,10 @@
                   display: flex
                   path
                       fill: #747474
+            &__summary 
+              color: purple
+              margin-top: 1.2em
+              margin-bottom: 1em
             p
                 padding-top: 10px
                 color: #686868
