--- a/src/components/styles/faq.sass
+++ b/src/components/styles/faq.sass
@@ -76,8 +76,15 @@
                             transition: all .35s ease-in-out
                             path
                               fill: #2f2f2f
-
                             &.expanded 
-                                transform: rotateX(-180deg)
+                              transform: rotateX(-180deg)
+                        &__name
+                          &.visible
+                            opacity: 1
+                            position: relative
+                          &.hidden
+                            opacity: 0
+                            position: absolute
+                    
                     p 
                         margin-bottom: .75em
