fixed faq flex direction and border

--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -105,6 +105,7 @@
         display: flex
         // background: red
         flex-direction: column
+        justify-content: center
         @include edgesnap
             padding: 50px 20px
             width: 43.5%
