--- a/src/components/styles/faq.sass
+++ b/src/components/styles/faq.sass
@@ -35,17 +35,20 @@
                 width: 80%
                 display: flex
                 align-content: center
+                flex-direction: column
                 align-items: center
                 justify-content: center
                 @media(max-width: 760px)
                   width: 100%
+                &:nth-last-child(1)
+                  border-bottom: 1px solid lightgrey
                 &__slide
                     width: 100%
                     display: flex
                     flex-direction: column
                     // background: teal
                     border-top: 1px solid lightgrey
-                    border-bottom: 1px solid lightgrey
+                    // border-bottom: 1px solid lightgrey
                     color: $dark
                     cursor: pointer
                     p 
