--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -56,6 +56,7 @@
       display: flex
       flex-wrap: wrap
       justify-content: space-between
+      flex-direction: row-reverse
       h3
           display: flex
           width: 100%
@@ -77,10 +78,8 @@
       &__single
           display: flex
           justify-content: center
-          width: 15%
+          width: 24%
           align-items: center
-          @include tablet
-              width: 25%
           &__image
               width: 70%
 
