--- a/src/components/styles/team.sass
+++ b/src/components/styles/team.sass
@@ -13,6 +13,7 @@
         align-items: center
         @media(max-width: 760px)
             flex-direction: column
+            border-bottom: none
         &:first-child
             border-bottom: none
     
