re ordered and re styled sponsors, fixed faq arrows, added bg banner animations

--- a/src/components/styles/faq.sass
+++ b/src/components/styles/faq.sass
@@ -59,6 +59,8 @@
                       color: $accent
                       display: flex
                       margin: .5em 0em .5em 0em
+                      max-width: 90%
+                      line-height: 1.2em
                     &__title
                         justify-content: space-between
                         display: flex
@@ -68,7 +70,7 @@
                             display: flex
                             justify-self: center 
                             height: 100%
-                            width: 1.1em
+                            min-width: 1.1em
                             transition: all .35s ease-in-out
                         svg
                             align-self: center
