--- a/src/components/background_banner/background_banner.sass
+++ b/src/components/background_banner/background_banner.sass
@@ -33,13 +33,21 @@
               width: 100%
               height: 80%
               &__container
-                // background: red
                 object-position: left !important
                 width: 100%
                 height: 100%
                 max-height: 100%
                 // background: yellow
                 position: relative
+                opacity: 0
+                transform: scale(1.175)
+                // opacity: 1
+                transition: all 2.5s ease-in-out
+                // transition: all 1.5s ease-in-out
+                &.loaded 
+                  opacity: 1
+                  // transform: scale(1)
+                  transform: scale(1)
                 @include tablet-phone 
                     height: 80%
                     // width: auto
@@ -88,8 +96,16 @@
             &__top
               h2 
                 margin-top: -10px
+                // color: red
+                opacity: 0
+                transform: translateY(20%)
+                transition: all 1s ease-in-out
+                &.loaded 
+                  opacity: 1
+                  transform: translateY(0%)
               h4 
                 margin-top: 1em
+                // color: green
                 @include tablet-phone 
                   margin-top: 0em
                   margin-bottom: .5em
@@ -100,9 +116,22 @@
               @include tablet-phone 
                 align-items: center !important
                 text-align: center !important
+              &__text
+                transform: translateY(18%)
+                opacity: 0
+                transition: all 1s ease-in-out
+                &.loaded 
+                  transform: translateY(0%)
+                  opacity: 1
+                
+                  
               &__btn
                 display: flex
                 width: 100%
+                opacity: 0
+                transition: all 1s ease-in-out
+                &.loaded
+                  opacity: 1
               button 
                 margin-top: 1.25em
                 // @include tablet-phone 
