--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -1,6 +1,6 @@
 @import '../base.sass'
 .header__wrapper
-    // background: white
+    background: white
     // background: lightskyblue
     box-shadow: 0px 2px 2px 0px rgba(219,219,219,0.5)
     position: sticky 
