--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -73,13 +73,37 @@
             &__top
               h2 
                 margin-top: -10px
+                opacity: 0
+                transform: translateY(20%)
+                transition: all 1s ease-in-out
+                &.loaded 
+                  opacity: 1
+                  transform: translateY(0%)
+              h4 
+                opacity: 0
+                // transform: translateY(20%)
+                transition: all 1s ease-in-out
+                &.loaded 
+                  opacity: 1
+                  // transform: translateY(0%)
             &__bottom 
               display: flex 
               flex-direction: column
-              align-items: flex-end
+              // align-items: flex-end
+              &__text 
+                transform: translateY(18%)
+                opacity: 0
+                transition: all 1s ease-in-out
+                &.loaded 
+                  transform: translateY(0%)
+                  opacity: 1
               &__btn
                 display: flex
                 width: 100%
+                opacity: 0
+                transition: all 1s ease-in-out
+                &.loaded
+                  opacity: 1
               button 
                 margin-top: 1.25em
             @include phone-large
