--- a/src/components/styles/photos.sass
+++ b/src/components/styles/photos.sass
@@ -5,18 +5,38 @@
         h2
             margin-bottom: .8em
             margin-top: 1.5em
-        p
-            margin-bottom: 50px
-        hr
+            opacity: 0
+            transform: translateY(20%)
+            transition: all 1s ease-in-out
+            &.loaded 
+              opacity: 1
+              transform: translateY(0%)
+        .gallery__text
+          display: flex
+          text-align: center
+          justify-content: center
+          margin-bottom: 50px
+          opacity: 0
+          transition: all 1s ease-in-out
+          &.loaded 
+            opacity: 1
+        hr.photo__hr
             margin: auto
-            width: 20%
+            width: 0%
             background: #cdccca
             border: 0
             height: 1px
+            transition: all .5s ease-in-out
+            &.loaded
+              width: 20%
     .photos
         display: flex
         flex-wrap: wrap
         justify-content: space-between
+        opacity: 0
+        transition: all 1s ease-in-out
+        &.loaded 
+          opacity: 1
         &__single
             // display: fle
             width: 23%
