--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -22,6 +22,13 @@
                 width: 100%
             &__title
                 margin-top: 50px
+                &__title, &__name, &__text, &__button 
+                 transform: translateX(-8%)
+                 opacity: 0 
+                 transition: all 1.5s ease-in-out
+                 &.loaded 
+                  opacity: 1
+                  transform: translateX(0)
                 h4
                     margin-top: 15px
                     color: $accent
