removed uneccesary background colors

--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -64,7 +64,7 @@
       flex-wrap: wrap
       // justify-content: space-between
       justify-content: center
-      background: red
+      // background: red
       flex-direction: row-reverse
       h3
           display: flex
@@ -93,8 +93,10 @@
             width: 25%
           @include tablet-phone 
             width: 30%
+          //THIS ONLY WORKS FOR NOW WITH 16 SPONSORS BECAUSE WE HAVE ONE EXTRA
+          //MUST BE REMOVED WHEN WE EDIT THIS WITH MORE OR LESS
           &:nth-last-child(1)
-            background: orange
+            // background: orange
             margin: auto
           &__image
               width: 80%
