--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -91,6 +91,8 @@
             width: 25%
           @include tablet-phone 
             width: 30%
+          &:last-child
+            margin: auto
           &__image
               width: 80%
               // @include tablet-phone 
