--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -27,6 +27,8 @@
         // background: red
         display: flex
         text-align: center
+        @include edgesnap 
+        width: 40%
     h1
         width: 100%
         .image
@@ -51,8 +53,10 @@
         display: flex
         width: 36%
         // background: lightseagreen
+        @include edgesnap 
+          width: 40%
         @media(max-width: 1000px)
-          width: 43% !important
+          width: 48% !important
         // @media(max-width: 1100px)
           // width: 30%
         @include navsnap
