--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -67,6 +67,7 @@
     @include tablet 
       background-position: 78% 0% !important
     @include tablet-phone 
-      // background-size: contain !important
-      background-position: 72% 0% !important
+      background-size: 1500px !important 
+      baclground-repeat: no-repeat !important
+      background-position: 80% 0% !important
       // background-size: auto 10% !important
