--- a/src/components/styles/contribute.sass
+++ b/src/components/styles/contribute.sass
@@ -266,10 +266,18 @@
       &__content
         .banner__col 
           &__one 
+            // background: red
+            display: flex 
+            // justify-content: flex-end 
+            // align-items: flex-end 
+            // align-content: flex-end
             @media(max-width: 975px)
               display: flex
-              // background: red
             &__image
+              // background: red
+              // display: flex 
+              width: 100%
+              height: 100%
               @media(max-width: 975px)
                 display: flex 
                 height: 100% 
