--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -70,3 +70,6 @@
   .background__banner 
     background-size: cover !important
     background-position: 70% 30% !important
+    @include tablet-phone
+      background-size: 2800px !important
+      background-position: 100% 80%
