--- a/src/components/background_banner/background_banner.sass
+++ b/src/components/background_banner/background_banner.sass
@@ -32,6 +32,7 @@
               justify-content: center
               width: 100%
               height: 80%
+              // padding: 20px 0px
               &__container
                 object-position: left !important
                 width: 100%
