--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -85,6 +85,10 @@
         @include tablet 
           width: 75%
 
+#mc-embedded-subscribe-form   
+     height: 2rem
+     .button
+        padding: 2px 35px      
 .right__banner 
   .gatsby-image-wrapper, img 
     object-position: right !important
