--- a/src/components/styles/contribute.sass
+++ b/src/components/styles/contribute.sass
@@ -238,6 +238,7 @@
                         height: 100%
                         // width: 80% 
                         background: rgba(250,250,250,1)
+                        border: 1px solid rgba(250, 250, 250, 1)
                         border-top-left-radius: 100px
                         border-bottom-left-radius: 100px
                       p 
@@ -302,3 +303,4 @@
                   @media(max-width: 975px)
                     height: 100% !important
                     right: 0 !important
+                    margin-top: -13px
