--- a/src/components/styles/photos.sass
+++ b/src/components/styles/photos.sass
@@ -32,6 +32,8 @@
     .photos
         display: flex
         flex-wrap: wrap
+        // flex-direction: column-reverse
+        flex-direction: row-reverse
         justify-content: space-between
         opacity: 0
         transition: all 1s ease-in-out
