added new background images

--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -68,6 +68,6 @@
       background-position: 78% 0% !important
     @include tablet-phone 
       background-size: 1500px !important 
-      baclground-repeat: no-repeat !important
+      background-repeat: no-repeat !important
       background-position: 80% 0% !important
       // background-size: auto 10% !important
