--- a/src/components/layout/footer.sass
+++ b/src/components/layout/footer.sass
@@ -83,6 +83,8 @@
                     height: 20px
                     width: 20px
                     margin-right: 14px
+                a:last-child
+                    margin-right: 0
             &__title
                 display: flex 
                 // background: red
@@ -113,4 +115,3 @@
   margin-bottom: 6px
   font-size: .9em
 
-                
