fixed typo on program page, added back robot coupe, added negative margin on phone to contact hero

--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -94,3 +94,9 @@
     object-position: right !important
     @include tablet-phone
       object-position: center !important
+
+
+.contactbanner
+  .banner__col__two 
+    @include phone-large 
+      margin-top: -15px
