--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -6,6 +6,8 @@
     &, .weeks 
       h3 
         @include tablet-phone 
+          font-size: 2.2em
+          line-height: 1.5em
           text-align: center
     .overview
         display: flex
@@ -98,3 +100,4 @@
       // background-repeat: no-repeat !important
       background-position: 90% 0% !important
       // background-size: auto 10% !important
+    
