--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -26,6 +26,58 @@
             align-self: center
             @include tablet-phone 
               width: 95%
+        &__buttons 
+          margin-top: 1em
+          display: flex 
+          align-self: center
+          justify-content: space-between
+          max-width: 80%
+          width: 80%
+          // background: pink 
+          @media(max-width: 1050px)
+            width: 90%
+            max-width: 90%
+          @media(max-width: 760px)
+            flex-wrap: wrap
+            width: 70%
+          @include tablet-phone 
+            width: 90%
+          @media(max-width: 340px) 
+            justify-content: center
+          &__button 
+            width: 20%
+            @media(max-width: 950px)
+              width: 23%
+            @media(max-width: 760px)
+              width: 35%
+              margin-top: 2em
+            @include tablet-phone 
+              width: 40%
+            @include phone-large 
+              width: 45%
+            @media(max-width: 340px)
+              width: 60%
+            button
+              width: 100%
+              border: 1px solid $dark 
+              border-radius: 100px
+              padding: 4.5px 25px
+              margin-bottom: 1em
+              transition: all .5s ease-in-out
+              @include tablet 
+                font-size: .95em
+                padding: 4px 19px
+              @media(max-width: 760px)
+                font-size: 1.05em
+              &:hover
+                text-decoration: none
+                box-shadow: 0px 0px 15px -4px rgba(219,219,219,0.9)
+                transform: scale(1.03)
+            &__info 
+              width: 100%
+              display: flex 
+              flex-direction: column
+              color: $lighter
        
     .enroll
         display: flex
@@ -43,6 +95,9 @@
                     width: 98%
                 &__single
                     // margin-bottom: 40px
+                    &:nth-last-child(1)
+                      hr 
+                        display: none
                     h4
                         margin-bottom: 0.5em
                     hr
@@ -63,7 +118,7 @@
   .background__banner
     background-repeat: no-repeat
     background-size: cover
-    background-position: bottom right
+    background-position: 100% 100%
     @include tablet 
       background-position: 78% 0% !important
     @include tablet-phone 
