--- a/src/components/styles/homepage.sass
+++ b/src/components/styles/homepage.sass
@@ -84,35 +84,34 @@
           margin-bottom: 2.5em
           @include tablet
             max-width: 100%
-      // &__single
-      //   display: flex
-      //   justify-content: center
-      //   width: 18%
-      //   align-items: center
-      //   // align-content: space-between
-      //   @include tablet
-      //     width: 28%
-
-      //   &__image  
-      //     width: 70%
-      //     @include tablet-phone  
-      //       width: 100%
-      //this is if we have 16 sponsors total, with one centered at the bottom
       &__single
-          display: flex
-          justify-content: center
-          width: 18%
-          align-items: center
-          @include tablet
-            width: 25%
-          @include tablet-phone 
-            width: 30%
-          &:last-child
-            margin: auto
-          &__image
-              width: 80%
-              // @include tablet-phone 
-              //   width: 100%
+        display: flex
+        justify-content: center
+        width: 20%
+        align-items: center
+        // align-content: space-between
+        @include tablet
+          width: 28%
+        &__image  
+          width: 70%
+          @include tablet-phone  
+            width: 100%
+      //this is if we have 16 sponsors total, with one centered at the bottom
+      // &__single
+      //     display: flex
+      //     justify-content: center
+      //     width: 18%
+      //     align-items: center
+      //     @include tablet
+      //       width: 25%
+      //     @include tablet-phone 
+      //       width: 30%
+      //     &:last-child
+      //       margin: auto
+      //     &__image
+      //         width: 80%
+      //         // @include tablet-phone 
+      //         //   width: 100%
 
 .home
   .page__sign
