--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -78,7 +78,108 @@
               display: flex 
               flex-direction: column
               color: $lighter
-       
+        &__app
+          margin-top: 4em
+          text-align: center
+          width: 100%
+          // padding: 5em 2em
+          h3 
+            margin-bottom: .6em
+          h4 
+            color: $accent 
+            margin-bottom: 1em
+          &__form 
+            display: flex
+            // flex-direction: column
+            justify-content: space-between
+            flex-wrap: wrap 
+            width: 100%
+            box-shadow: 0px 0px 5px 1px rgba(219,219,219,0.5) 
+            padding: 2em 5.5em
+            // background: pink
+            input 
+              width: 40%
+            label 
+              display: flex 
+              flex-direction: column 
+              align-items: flex-start 
+              // color: red
+              font-size:  .9em
+              width: 40% 
+              // background: green 
+              //changes vertical spacing of elements
+              margin-top: 4.75em
+              input, select
+                width: 100%
+                // height: 45px
+                margin-top: .65em 
+                // border: .5px solid lightgrey
+                border: none
+                border-bottom: .5px solid lightgrey
+                font-size: 1.2em
+              // .form-check 
+              //   display: flex
+              //   flex-wrap: wrap 
+              //   color: pink
+              //   width: 100%
+              //   background: orange
+            label.radio 
+              // background: red
+              display: flex 
+              // flex-direction: row !important
+              // justify-content: center 
+              // align-items: center 
+              .form-radio 
+                // background: pink 
+                display: flex 
+                width: 100%
+                .form-check
+                  // width: 30% 
+                  margin-right: 50px
+                  // background: orange 
+                  // display: flex 
+                  align-content: center 
+                  align-items: center
+                  font-size: 1.15em
+                  // background: orange
+                  //resets height of radio buttons so they aren't so long
+                  margin-top: -3.5em
+                  label 
+                    display: flex
+                    // margin-top: 0px
+                    // color: orange 
+                    // margin-bottom: 20px !important
+                    input[type="radio"]
+                      // height: 50px
+                      display: flex
+                      width: 25px
+                      margin-bottom: 7px
+                      border: 0
+          .submit-button
+            display: flex 
+            justify-content: flex-end 
+            width: 100% 
+            margin-top: 3em  
+            input
+              // color: red !important
+              border: 1px solid black 
+              border-radius: 100px
+              // background: orange
+              align-content: center
+              align-self: center 
+              justify-self: center 
+              width: auto 
+              padding: 5px 25px
+              font-size: .9em
+              transition: all .55s ease-in-out
+              &:hover
+                transform: scale(1.065)
+                border: 1px solid white
+                color: white
+                background: 
+                  color: $accent
+
+
     .enroll
         display: flex
         flex-direction: column
