--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -97,8 +97,16 @@
             box-shadow: 0px 0px 5px 1px rgba(219,219,219,0.5) 
             padding: 2em 5.5em
             // background: pink
+            @media(max-width: 750px)
+              flex-wrap: none
+              justify-content: center
+            @media(max-width: 580px)
+              padding: 1.5em 3em  
             input 
               width: 40%
+              // background: red
+              @media(max-width: 750px)
+                width: 90%
             label 
               display: flex 
               flex-direction: column 
@@ -109,6 +117,12 @@
               // background: green 
               //changes vertical spacing of elements
               margin-top: 4.75em
+              text-align: left
+              @media(max-width: 1000px)
+                width: 45%
+                font-size: .95em
+              @media(max-width: 750px)
+                width: 90%
               input, select
                 width: 100%
                 // height: 45px
@@ -117,18 +131,32 @@
                 border: none
                 border-bottom: .5px solid lightgrey
                 font-size: 1.2em
+                @media(max-width: 1000px)
+                  font-size: 1em
               // .form-check 
               //   display: flex
               //   flex-wrap: wrap 
               //   color: pink
               //   width: 100%
-              //   background: orange
+              //   background: orange  
+              .date-pickers 
+                display: flex 
+                width: 100%
+                justify-content: space-between
+                // background: pink
+                select.month
+                  width: 45%
+                select.day 
+                  width: 20%
+                select.year 
+                  width: 25%
             label.radio 
               // background: red
               display: flex 
               // flex-direction: row !important
               // justify-content: center 
               // align-items: center 
+              
               .form-radio 
                 // background: pink 
                 display: flex 
@@ -159,7 +187,10 @@
             display: flex 
             justify-content: flex-end 
             width: 100% 
-            margin-top: 3em  
+            margin-top: 3em 
+            @media(max-width: 750px) 
+              justify-content: center
+              margin-bottom: 1.5em
             input
               // color: red !important
               border: 1px solid black 
