added data passing added toasts

--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -258,3 +258,5 @@
       background-repeat: no-repeat !important
       background-position: 80% 0% !important
       // background-size: auto 10% !important
+.Toastify__toast--success
+  background: #6fd878 !important
