fixing some snip cart stuff

--- a/src/components/styles/deposit.sass
+++ b/src/components/styles/deposit.sass
@@ -95,3 +95,14 @@
       display: none
     h4 
       margin-bottom: .45em
+.snip-header
+  background: white !important
+.snip-footer
+  background: white !important
+.snip-ico
+  &:before
+    content: "X" !important
+.snip-layout__close
+
+  .snip-ico--close
+    color: black !important
