--- a/src/components/styles/deposit.sass
+++ b/src/components/styles/deposit.sass
@@ -1,5 +1,5 @@
 @import "../base.sass"
-
+@import url("https://use.fontawesome.com/releases/v5.8.2/css/all.css")
 .deposit
   &__container
     display: flex 
@@ -101,8 +101,31 @@
   background: white !important
 .snip-ico
   &:before
-    content: "X" !important
+   font-family: "Font Awesome 5 Free"
+   font-weight: 900
+   content: "\f00d" !important
+   // content: "X" !important
 .snip-layout__close
 
   .snip-ico--close
     color: black !important
+.snip-ico--basket 
+  &:before
+   font-family: "Font Awesome 5 Free"
+   font-weight: 900
+   content: "\f291" !important
+.snip-ico--receipt
+  &:before
+   font-family: "Font Awesome 5 Free"
+   font-weight: 900
+   content: "\f543" !important
+.snip-ico--credit-cart 
+  &:before
+   font-family: "Font Awesome 5 Free"
+   font-weight: 900
+   content: "\f09d" !important
+.snip-ico--checklist
+  &:before
+   font-family: "Font Awesome 5 Free"
+   font-weight: 900
+   content: "\f022" !important
