added class full background color and stoped it from scrolling you when a class is full

--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -79,6 +79,8 @@
               color: white
               background: 
                 color: $accent
+            .class__full
+              background: #c3c0c0
 
             &__info 
               width: 100%
