fixed a few bugs

--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -80,7 +80,8 @@
               background: 
                 color: $accent
             .class__full
-              background: #c3c0c0
+              color: lightgrey
+              border-color: lightgrey
 
             &__info 
               width: 100%
