--- a/src/components/styles/program.sass
+++ b/src/components/styles/program.sass
@@ -25,8 +25,9 @@
                 width: 98%
                 font-size: 10pt
             h4
-                margin: 10px 0
-                color: $accent
+              margin: 10px 0
+              text-align: center
+              color: $accent
             p
                 flex: 1
             &__info 
