--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -32,37 +32,47 @@
           align-self: center
           justify-content: space-between
           max-width: 80%
+          flex-wrap: wrap
           width: 80%
           // background: pink 
           @media(max-width: 1050px)
-            width: 90%
-            max-width: 90%
+            width: 100%
+            max-width: 100%
           @media(max-width: 760px)
             flex-wrap: wrap
             width: 70%
           @include tablet-phone 
             width: 90%
-          @media(max-width: 340px) 
+          @media(max-width: 500px) 
+            width: 100%
+          @media(max-width: 400px) 
             justify-content: center
           &__button 
-            width: 20%
+            width: 27%
             @media(max-width: 950px)
-              width: 23%
+              width: 30%
+            @media(max-width: 850px)
+              width: 32%
             @media(max-width: 760px)
-              width: 35%
+              width: 50%
               margin-top: 2em
             @include tablet-phone 
-              width: 40%
+              width: 48%
             @include phone-large 
-              width: 45%
-            @media(max-width: 340px)
-              width: 60%
+              width: 80%
+            @media(max-width: 500px) 
+              width: 50%
+              font-size: .9em
+            @media(max-width: 400px)
+              width: 70%
+              font-size: 1.05em
             button
-              width: 100%
+              width: 70%
               border: 1px solid $dark 
               border-radius: 100px
               padding: 4.5px 25px
               margin-bottom: 1em
+              margin-top: 1.5em
               transition: all .5s ease-in-out
               @include tablet 
                 font-size: .95em
