removed the spots open and added a check box to the form

--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -159,7 +159,11 @@
               //   color: pink
               //   width: 100%
               //   background: orange  
-              .date-pickers 
+            .will__pay
+              flex-direction: row
+              input
+                width: 20px
+            .date-pickers 
                 display: flex 
                 width: 100%
                 justify-content: space-between
