hotfox on the check box

--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -160,9 +160,11 @@
               //   width: 100%
               //   background: orange  
             .will__pay
-              flex-direction: row
+              flex-direction: row-reverse
+              align-items: center
               input
                 width: 20px
+                margin-right: 40px
             .date-pickers 
                 display: flex 
                 width: 100%
