--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -166,7 +166,7 @@
                 width: 20px
                 margin-right: 40px
                 @media(max-width: 1150px) 
-                  width: auto
+                  width: initial
                   margin-right: 0
             .date-pickers 
                 display: flex 
