--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -163,11 +163,11 @@
               flex-direction: row-reverse
               align-items: center
               input
-                width: 20px
-                margin-right: 40px
+                //width: 20px
+                //margin-right: 40px
                 @media(max-width: 1150px) 
-                  width: initial
-                  margin-right: 0
+                  //width: initial
+                  //margin-right: 0
             .date-pickers 
                 display: flex 
                 width: 100%
