--- a/src/components/styles/enroll.sass
+++ b/src/components/styles/enroll.sass
@@ -162,6 +162,10 @@
             .will__pay
               flex-direction: row-reverse
               align-items: center
+              &__checkbox
+                width: 10%
+                min-width: 30px
+                margin-right: 40px
               input
                 //width: 20px
                 //margin-right: 40px
